--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "exaile"]
 	path = exaile
-	url = https://github.com/luzip665/exaile.git
+	url = https://github.com/exaile/exaile.git
 	branch = master
