--- a/launchpad/plugin_quickbuttons/control
+++ b/launchpad/plugin_quickbuttons/control
@@ -8,17 +8,5 @@ Homepage: https://exaile.org
 
 Package: exaile-plugin-quickbuttons
 Architecture: all
-Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14)
-Description: Exaile is a music player with a simple interface
- Exaile is a music player with a simple interface and powerful
- music management capabilities. Features include automatic fetching of album art,
- lyrics fetching, streaming internet radio, tabbed playlists, smart playlists
- with extensive filtering/search capabilities, and much more.
- .
- Exaile is written using Python and GTK+ and is easily extensible via plugins.
- There are over 50 plugins distributed with Exaile that include advanced track
- tagging, last.fm scrobbling, support for portable media players, podcasts,
- internet radio such as icecast and Soma.FM, ReplayGain, output via a secondary
- output device (great for DJs!), and much more.
- .
- For more information see https://www.exaile.org/
+Depends: exaile (>=4.1.1)
+Description: Plug In to get quick settings buttons on bottom line
