--- a/launchpad/current_head/control
+++ b/launchpad/current_head/control
@@ -1,4 +1,4 @@
-Source: exaile
+Source: <#PKG_NAME#>
 Section: sound
 Priority: optional
 Maintainer: js <exaile-users@googlegroups.com>
@@ -6,7 +6,7 @@ Build-Depends: debhelper-compat (= 11), python3 (>= 3.6), python3-sphinx (>= 1.6
 Standards-Version: 3.5.2
 Homepage: https://exaile.org
 
-Package: exaile
+Package: <#PKG_NAME#>
 Architecture: all
 Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14)
 Description: Exaile is a music player with a simple interface
