--- a/debian/current_stable/control
+++ b/debian/current_stable/control
@@ -3,9 +3,8 @@ Section: sound
 Priority: optional
 Maintainer: exaile <exaile-devel@googlegroups.com>
 Uploaders: luzip665 <luzip665@posteo.de>
-Build-Depends: debhelper-compat (= 11), python3 (>= 3.6), python3-sphinx (>= 1.6), python3-gi-cairo (>=3.26), help2man
+Build-Depends: debhelper-compat (>= 11), python3 (>= 3.6), python3-sphinx (>= 1.6), python3-gi-cairo (>=3.26), help2man
 Standards-Version: 4.6.0.1
-Format: 1.8
 Vcs-Git: https://github.com/exaile/exaile
 Homepage: https://exaile.org
 
