--- a/debian/current_stable/control
+++ b/debian/current_stable/control
@@ -3,18 +3,18 @@ Section: sound
 Priority: optional
 Maintainer: exaile <exaile-devel@googlegroups.com>
 Uploaders: luzip665 <luzip665@posteo.de>
-Build-Depends: debhelper-compat (>= 11), python3 (>= 3.6), python3-sphinx (>= 1.6), python3-gi-cairo (>=3.26), help2man
+Build-Depends: debhelper-compat (= 12), python3 (>= 3.6), python3-sphinx (>= 1.6), python3-gi-cairo (>=3.26), help2man
 Standards-Version: 4.6.0.1
 Homepage: https://exaile.org
 
 Package: exaile
 Architecture: all
-Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14)
+Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14), ${misc:Depends}
 Description: Exaile is a music player with a simple interface
  Exaile is a music player with a simple interface and powerful
- music management capabilities. Features include automatic fetching of album art,
- lyrics fetching, streaming internet radio, tabbed playlists, smart playlists
- with extensive filtering/search capabilities, and much more.
+ music management capabilities. Features include automatic fetching of album
+ art, lyrics fetching, streaming internet radio, tabbed playlists, smart
+ playlists with extensive filtering/search capabilities, and much more.
  .
  Exaile is written using Python and GTK+ and is easily extensible via plugins.
  There are over 50 plugins distributed with Exaile that include advanced track
