--- a/debian/overrides/Makefile
+++ b/debian/overrides/Makefile
@@ -49,7 +49,7 @@ builddir:
 compile:
 	$(PYTHON3_CMD) -m compileall -q xl xlgui
 	$(PYTHON3_CMD) -O -m compileall -q xl xlgui
-	#$(MAKE) -C plugins compile
+	$(MAKE) -C plugins compile
 
 make-install-dirs:
 	install -d -m 755 $(EXAILEBINDIR)
