--- a/debian/current_stable/rules
+++ b/debian/current_stable/rules
@@ -6,6 +6,9 @@
 	dh $@
 
 override_dh_auto_install:
+	dh_auto_clean
+	make manpage
+	make completion
 	dh_auto_install -- PREFIX=/usr
 #override_dh_installdocs:
 #	dh_installdocs readme
