--- a/debian/current_stable/control
+++ b/debian/current_stable/control
@@ -1,7 +1,7 @@
 Source: exaile
 Section: sound
 Priority: optional
-Maintainer: exaile <exaile-devel@googlegroups.com>
+Maintainer: luzip665 <luzip665@posteo.de>
 Uploaders: luzip665 <luzip665@posteo.de>
 Build-Depends: debhelper-compat (= 13), python3 (>= 3.6), python3-sphinx (>= 1.6), python3-gi-cairo (>=3.26), help2man
 Standards-Version: 4.6.1.0
