--- a/debian/current_stable/rules
+++ b/debian/current_stable/rules
@@ -5,12 +5,12 @@
 %:
 	dh $@
 
-override_dh_auto_install:
-	dh_auto_clean
+override_dh_auto_build:
 	make manpage
 	make completion
+	make locale
+override_dh_auto_install:
 	dh_auto_install -- PREFIX=/usr
-#override_dh_installdocs:
-#	dh_installdocs readme
+	find $(CURDIR) \( -name 'COPYING' -o -name 'LICENSE' \) -delete
 override_dh_usrlocal:
 override_dh_auto_test:
