--- a/launchpad/current_head/control
+++ b/launchpad/current_head/control
@@ -8,7 +8,18 @@ Homepage: https://exaile.org
 
 Package: <#PKG_NAME#>
 Architecture: all
-Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14), gvfs-backends (>=1.36)
+Depends:
+ python3 (>= 3.6),
+ python3-bsddb3 (>=6.1),
+ libgtk-3-0 (>= 3.22),
+ gstreamer1.0-plugins-good (>=1.14),
+ python3-mutagen (>=1.38),
+ python3-gi-cairo (>=3.26),
+ gir1.2-gtk-3.0 (>=3.22),
+ gir1.2-gst-plugins-base-1.0 (>=1.14),
+ gvfs-backends (>=1.36),
+ python3-libdiscid (>=2.0),
+ python3-musicbrainzngs (>=0.7)
 Description: Exaile is a music player with a simple interface
  Exaile is a music player with a simple interface and powerful
  music management capabilities. Features include automatic fetching of album art,
