--- a/debian/current_stable/control
+++ b/debian/current_stable/control
@@ -8,7 +8,19 @@ Homepage: https://exaile.org
 
 Package: exaile
 Architecture: all
-Depends: python3 (>= 3.6), python3-bsddb3 (>=6.1), libgtk-3-0 (>= 3.22), gstreamer1.0-plugins-good (>=1.14), python3-mutagen (>=1.38), python3-gi-cairo (>=3.26), gir1.2-gtk-3.0 (>=3.22), gir1.2-gst-plugins-base-1.0 (>=1.14), ${misc:Depends}
+Depends:
+ python3 (>= 3.6),
+ python3-bsddb3 (>=6.1),
+ libgtk-3-0 (>= 3.22),
+ gstreamer1.0-plugins-good (>=1.14),
+ python3-mutagen (>=1.38),
+ python3-gi-cairo (>=3.26),
+ gir1.2-gtk-3.0 (>=3.22),
+ gir1.2-gst-plugins-base-1.0 (>=1.14),
+ gvfs-backends (>=1.36),
+ python3-libdiscid (>=2.0),
+ python3-musicbrainzngs (>=0.7),
+ ${misc:Depends}
 Description: Music player with a simple interface and powerful capabilities
  Exaile is a music player with a simple interface and powerful
  music management capabilities. Features include automatic fetching of album
