--- a/launchpad/current_head/control
+++ b/launchpad/current_head/control
@@ -15,8 +15,23 @@ Depends:
  gstreamer1.0-plugins-good (>=1.14),
  python3-mutagen (>=1.38),
  python3-gi-cairo (>=3.26),
+ gir1.2-atk-1.0,
+ gir1.2-gdk-3.0,
+ gir1.2-gdkpixbuf-2.0,
+ gir1.2-gio-2.0,
+ gir1.2-girepository-2.0,
+ gir1.2-glib-2.0,
+ gir1.2-gobject-2.0,
  gir1.2-gtk-3.0 (>=3.22),
  gir1.2-gst-plugins-base-1.0 (>=1.14),
+ gir1.2-gstreamer-1.0,
+ gir1.2-pango-1.0,
+ ${misc:Depends}
+Suggests:
+ gir1.2-keybinder-3.0,
+ gir1.2-pangocairo-1.0,
+ gir1.2-notify-0.7,
+ gir1.2-webkit2-4.1 | gir1.2-webkit2-4.0,
  gvfs-backends (>=1.36),
  python3-libdiscid (>=2.0),
  python3-musicbrainzngs (>=0.7)
