--- a/debian/current_stable/control
+++ b/debian/current_stable/control
@@ -16,6 +16,7 @@ Depends:
  gstreamer1.0-plugins-good (>=1.14),
  python3-mutagen (>=1.38),
  python3-gi-cairo (>=3.26),
+ python3-dbus,
  gir1.2-atk-1.0,
  gir1.2-gdk-3.0,
  gir1.2-gdkpixbuf-2.0,
@@ -34,6 +35,7 @@ Suggests:
  gir1.2-notify-0.7,
  gir1.2-webkit2-4.1 | gir1.2-webkit2-4.0,
  gvfs-backends (>=1.36),
+ python3-feedparser,
  python3-libdiscid (>=2.0),
  python3-musicbrainzngs (>=0.7)
 Description: Music player with a simple interface and powerful capabilities
