--- a/debian/current_stable/rules
+++ b/debian/current_stable/rules
@@ -8,7 +8,7 @@
 override_dh_auto_build:
 	make manpage
 	make completion
-	make locale
+	make desktop_files
 override_dh_auto_install:
 	dh_auto_install -- PREFIX=/usr
 	find $(CURDIR) \( -name 'COPYING' -o -name 'LICENSE' \) -delete
